Fix word break at list items

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -105,6 +105,8 @@
     line-height: 24px;
 
     margin-top: 16px;
+
+    word-break: break-word;
 }
 
 .md-list > li > ul > li:before {
